--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "localtunnel": "^2.0.2",
     "mysql2": "^3.14.1",
     "ngrok": "^5.0.0-beta.2",
-    "nodemailer": "^7.0.4"
+    "nodemailer": "^7.0.4",
+    "pusher": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
