--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mysql2": "^3.14.1",
     "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^7.0.4",
-    "pusher": "^5.2.0"
+    "pusher": "^5.2.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
