--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "localtunnel": "^2.0.2",
     "mysql2": "^3.14.1",
     "ngrok": "^5.0.0-beta.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.4",
     "pusher": "^5.2.0",
     "socket.io": "^4.8.1"
